--- a/index.html
+++ b/index.html
@@ -3,30 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@400;500;700&family=Raleway:ital,wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/modern-normalize.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>WebStudio</title>
   </head>
 
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a href="./index.html" class="logo-web">Web<span class="logo-studio">Studio</span></a>
+        <ul class="nav-list">
+          <li><a href="./index.html" class="header-list">Studio</a></li>
+          <li><a href="" class="header-list">Portfolio</a></li>
+          <li><a href="" class="header-list">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="contacts-list">
+          <li><a href="mailto:info@devstudio.com" class="contacts-text">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="contacts-text">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="solutions-img">
+        <h1 class="solutions-text">Effective Solutions for Your Business</h1>
+        <button type="button" class="solutions-button">Order Service</button>
       </section>
 
       <section>
@@ -85,6 +93,43 @@
             <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>
+          Our Portfolio
+        </h2>
+        <ul>
+          <li>
+            <img src="./images/bank.jpg" alt="bank" width="360" height="300">
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/payment.jpg" alt="payment" width="360" height="300">
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/app.jpg" alt="app" width="360" height="300">
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/taxi.jpg" alt="taxi" width="360" height="300">
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/screen.jpg" alt="screen" width="360" height="300">
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/courses.jpg" alt="courses" width="360" height="300">
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
