--- a/index.html
+++ b/index.html
@@ -37,33 +37,33 @@
         <button type="button" class="solutions-button">Order Service</button>
       </section>
 
-      <section>
+      <section class="features">
         <h2 hidden>feature</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="features-header">Strategy</h3>
+            <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="features-header">Punctuality</h3>
+            <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="features-header">Diligence</h3>
+            <p class="features-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="features-header">Technologies</h3>
+            <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -71,65 +71,65 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team-header">
+        <h2 class="team-text">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-img">
             <img src="./images/img_3.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-descr">Product Designer</p>
           </li>
-          <li>
+          <li class="team-img">
             <img src="./images/img_2.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-descr">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-img">
             <img src="./images/img_1.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-descr">Marketing</p>
           </li>
-          <li>
+          <li class="team-img">
             <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-descr">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>
+      <section class="portfolio-header">
+        <h2 class="portfolio">
           Our Portfolio
         </h2>
-        <ul>
-          <li>
+        <ul class="portfolio-list">
+          <li class="portfolio-img">
             <img src="./images/bank.jpg" alt="bank" width="360" height="300">
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-text">Banking App</h3>
+            <p class="portfolio-descr">App</p>
           </li>
-          <li>
+          <li class="portfolio-img">
             <img src="./images/payment.jpg" alt="payment" width="360" height="300">
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-text">Cashless Payment</h3>
+            <p class="portfolio-descr">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-img">
             <img src="./images/app.jpg" alt="app" width="360" height="300">
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-text">Meditation App</h3>
+            <p class="portfolio-descr">App</p>
           </li>
-          <li>
+          <li class="portfolio-img">
             <img src="./images/taxi.jpg" alt="taxi" width="360" height="300">
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-text">Taxi Service</h3>
+            <p class="portfolio-descr">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-img">
             <img src="./images/screen.jpg" alt="screen" width="360" height="300">
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-text">Screen Illustrations</h3>
+            <p class="portfolio-descr">Design</p>
           </li>
-          <li>
+          <li class="portfolio-img">
             <img src="./images/courses.jpg" alt="courses" width="360" height="300">
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-text">Online Courses</h3>
+            <p class="portfolio-descr">Marketing</p>
           </li>
         </ul>
       </section>
