--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>WebStudio</title>
   </head>
 
-  <body>
+  <body class="body">
     <header>
       <nav>
         <a href="./index.html" class="logo-web">Web<span class="logo-studio">Studio</span></a>
@@ -134,9 +134,9 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo-web">Web<span class="logo-studio">Studio</span></a>
+      <p class="footer-descr">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
