--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@400;500;700&family=Raleway:ital,wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/modern-normalize.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+ />
     <link rel="stylesheet" href="css/styles.css" />
     <title>WebStudio</title>
   </head>
