--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="body">
     <header>
       <nav>
-        <a href="./index.html" class="logo-web">Web<span class="logo-studio">Studio</span></a>
+        <a href="./index.html" class="logo-web">Web<span class="logo-studio-head">Studio</span></a>
         <ul class="nav-list">
           <li><a href="./index.html" class="header-list">Studio</a></li>
           <li><a href="" class="header-list">Portfolio</a></li>
@@ -138,7 +138,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo-web">Web<span class="logo-studio">Studio</span></a>
+      <a href="./index.html" class="logo-web">Web<span class="logo-studio-foot">Studio</span></a>
       <p class="footer-descr">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
