--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>WebStudio</title>
   </head>
 
-  <body class="body">
+  <body>
     <header>
       <nav>
         <a href="./index.html" class="logo-web">Web<span class="logo-studio-head">Studio</span></a>
